 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc2

 - [ZBX-3135] add an example for using standard input in zabbix_sender manpage (Richlv)
 - [ZBX-2616] bundled DejaVu font upgraded from 2.31 to 2.32 (Richlv)
 - [ZBX-2630] fixed ability to translate various strings in the frontend depending on their context (Richlv)
 - [ZBX-3091] fixed error when update proxy (Vedmak)
 - [ZBX-3042] fixed submitParent field error (KB)
 - [ZBX-1038] fixed last(), prev(), diff(), change(), and abschange() not working properly with long textual values (asaveljevs)
 - [ZBXNEXT-532] specify timestamp format in zabbix_sender manpage and help output; hint at required item configuration in zabbix_sender manpage (Richlv)
 - [ZBX-3103] updated French translation; thanks to Alixen (Richlv)
 - [ZBX-3095] fixed processing of 'Host template' condition in actions (Sasha)
 - [ZBX-2981] removed unnecessary queries in map permission checks (Vedmak)
 - [ZBX-3080] fixed javascript not cached by browsers (Vedmak)
 - [ZBX-2661] improved displaying discovery checks in configuration (Vedmak)
 - [ZBX-3086] fixed errors when edit hostgroup linkage for hosts and templates (Vedmak)
 - [ZBX-3025] resurrected unreachable pollers and StartPollersUnreachable configuration parameter (asaveljevs,Sasha)
 - [ZBX-2351] fixed server trying to insert duplicate eventids into the database (asaveljevs,Sasha)
 - [ZBX-3069] renamed monitoring graphs combobox "All" entry to "not selected" (Vedmak)

Changes for 1.8.4rc1

 - [ZBX-2872] greatly improved API methods consistency (Aly)
 - [ZBX-3070] fixed event date format inconsistency (Vedmak)